<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.example.arcane.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome_page" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.arcane.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_create_account"
        android:name="com.example.arcane.ui.login.CreateAccountFragment"
        android:label="Create Account"
        tools:layout="@layout/fragment_create_account" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.arcane.ui.events.OrganizerEventsFragment"
        android:label="My Events (Organizer)"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.arcane.ui.dashboard.DashboardFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.arcane.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_create_event"
        android:name="com.example.arcane.ui.createevent.CreateEventFragment"
        android:label="Create Event"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/navigation_user_events"
        android:name="com.example.arcane.ui.events.UserEventsFragment"
        android:label="My Events (User)"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_global_events"
        android:name="com.example.arcane.ui.events.GlobalEventsFragment"
        android:label="User Global Events"
        tools:layout="@layout/fragment_events" />

</navigation>